turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:32: error: not found: value U_TURN
    case U_TURN => left() ; left() ; forward()
         ^